# nanoGPT

./: .gitignore  CLAUDE.md  check_gpu.py  plot_loss.py  pyproject.toml  train.py  学习路线.md
.claude/: settings.local.json
my_doc/: day_1.md  day_2.md  day_3.md  学习路线.md
out-shakespeare-char-100/: loss.json  sample.txt
out-shakespeare-char-500/: loss.json  sample.txt
out-shakespeare-char-5000/: loss.json  sample.txt
